# generate-templates-mvp

./: .algokit.toml  README.md  package.json
.algokit/generators/python/: .flake8  copier.yaml  pyproject.toml
.algokit/generators/python/libs/placeholder-py/: README.md  package.json  pyproject.toml
.algokit/generators/react/.algokit/temp/: package-delta.json  script.js
.algokit/generators/react/sites/placeholder-site/: package.json  tailwind.config.js
.algokit/generators/tealscript/.algokit/temp/: package-delta.json
.algokit/generators/tealscript/contracts/placeholder-kit/: .gitignore  package.json  placeholder.test.ts  tsconfig.cjs.json  tsconfig.json
contracts/: README.md
